--- a/package.json
+++ b/package.json
@@ -3,15 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@mantine/carousel": "^6.0.8",
+    "@mantine/core": "^6.0.8",
+    "@mantine/dates": "^6.0.8",
+    "@mantine/dropzone": "^6.0.8",
+    "@mantine/ds": "^6.0.8",
+    "@mantine/form": "^6.0.8",
+    "@mantine/hooks": "^6.0.8",
+    "@mantine/modals": "^6.0.8",
+    "@mantine/notifications": "^6.0.8",
+    "@mantine/nprogress": "^6.0.8",
+    "@mantine/prism": "^6.0.8",
+    "@mantine/spotlight": "^6.0.8",
+    "@mantine/tiptap": "^6.0.8",
+    "@tabler/icons-react": "^2.17.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/extension-link": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.24",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
+    "dayjs": "^1.11.7",
+    "embla-carousel-react": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
